# chatty

./: .gitlab-ci.yml  NEWS  README.md  chatty.doap  meson.build  meson_options.txt  run.in  sm.puri.Chatty.json
data/: sm.puri.Chatty.gschema.xml
debian/: README.source  changelog  chatty.1  chatty.lintian-overrides  chatty.manpages  control  copyright  gbp.conf  rules  salsa-ci.yml  watch
debian/patches/: 0000-fix-missing-main-category-in-desktop-file.patch  0001-Disable-clock-test.patch  0001-fix-appstream-metadata-legacy-location.patch  0001-mmsd-Use-platform-independent-size-types.patch  series
debian/tests/: control
debian/upstream/: metadata
help/: meson.build
help/C/: index.page
po/: POTFILES.in  POTFILES.skip  es.po  it.po  nl.po  pt_BR.po  ro.po  sv.po  tr.po  uk.po
src/: chatty-application.c  chatty-attachments-view.c  chatty-attachments-view.h  chatty-avatar.c  chatty-avatar.h  chatty-chat-list.c  chatty-chat-list.h  chatty-chat-view.c  chatty-chat-view.h  chatty-chat.c  chatty-chat.h  chatty-clock.c  chatty-clock.h  chatty-contact-list.c  chatty-contact-list.h  chatty-contact-provider.c  chatty-contact-provider.h  chatty-enums.h  chatty-file-item.c  chatty-file-item.h  chatty-fp-row.h  chatty-history.c  chatty-history.h  chatty-image-item.c  chatty-list-row.c  chatty-list-row.h  chatty-log.c  chatty-log.h  chatty-manager.c  chatty-manager.h  chatty-media.c  chatty-media.h  chatty-message-row.c  chatty-message-row.h  chatty-message.c  chatty-message.h  chatty-mm-chat.c  chatty-mm-chat.h  chatty-notification.c  chatty-notification.h  (+15 more)
src/css/: style.css
src/dialogs/: chatty-chat-info.c  chatty-chat-info.h  chatty-info-dialog.c  chatty-ma-account-details.c  chatty-ma-account-details.h  chatty-ma-chat-info.c  chatty-ma-chat-info.h  chatty-mm-chat-info.c  chatty-mm-chat-info.h  chatty-new-chat-dialog.c  chatty-new-chat-dialog.h  chatty-new-muc-dialog.c  chatty-new-muc-dialog.h  chatty-pp-account-details.c  chatty-pp-account-details.h  chatty-pp-chat-info.c  chatty-pp-chat-info.h  chatty-settings-dialog.c  chatty-settings-dialog.h
src/matrix/: chatty-ma-account.c  chatty-ma-account.h  chatty-ma-buddy.c  chatty-ma-buddy.h  chatty-ma-chat.c  chatty-ma-chat.h  chatty-matrix.c  chatty-matrix.h  matrix-api.c  matrix-api.h  matrix-db.c  matrix-db.h  matrix-enc.c  matrix-filter.json  matrix-net.c  matrix-net.h  matrix-utils.c  matrix-utils.h  meson.build
src/mm/: chatty-mm-account-private.h  chatty-mm-account.c  chatty-mm-account.h  chatty-mm-buddy.c  chatty-mm-chat.c  chatty-mm-chat.h  chatty-mmsd.c  chatty-mmsd.h  chatty-sms-uri.c  chatty-sms-uri.h  meson.build
src/purple/: chatty-pp-account.c  chatty-pp-account.h  chatty-pp-buddy.c  chatty-pp-buddy.h  chatty-pp-chat.c  chatty-pp-chat.h  chatty-pp-utils.c  chatty-pp-utils.h  chatty-purple-request.c  chatty-purple.c  chatty-purple.h  meson.build
src/purple/xeps/: chatty-xep-0313.c  chatty-xep-0352.c  xeps.c
src/ui/: chatty-chat-list.ui  chatty-chat-view.ui  chatty-contact-list.ui  chatty-dialog-join-muc.ui  chatty-dialog-new-chat.ui  chatty-file-item.ui  chatty-info-dialog.ui  chatty-list-row.ui  chatty-ma-account-details.ui  chatty-ma-chat-info.ui  chatty-message-row.ui  chatty-mm-chat-info.ui  chatty-pp-account-details.ui  chatty-pp-chat-info.ui  chatty-selectable-row.ui  chatty-settings-dialog.ui  chatty-window.ui  help-overlay.ui
src/users/: chatty-account.c  chatty-account.h  chatty-contact.c  chatty-contact.h  chatty-item.c  chatty-item.h  chatty-mm-account.c  chatty-mm-account.h  chatty-mm-buddy.c  chatty-mm-buddy.h  chatty-pp-account.c  chatty-pp-buddy.c  chatty-pp-buddy.h  itu-e212-iso.h
src/xeps/: chatty-xep-0313.c  chatty-xep-0352.c  xeps.c
subprojects/: libgd.wrap
tests/: account.c  clock.c  history.c  matrix-api.c  matrix-db.c  matrix-enc.c  matrix-utils.c  meson.build  message-text-item.c  mm-account.c  sms-uri.c  utils.c
tests/history-db/: empty-v4.sql  matrix-a-v3.sql  matrix-a-v4.sql  matrix-v4.sql  sms-DE-v4.sql  sms-IN-v4.sql  sms-v4.sql  telegram-chat-v4.sql  telegram-im-v4.sql  xmpp-im-v4.sql  xmpp-muc-v4.sql
